feat: [IOBP-421] Added additional outcome screen for already added methods (#5269)
## ⚠️ This PR depends on #5243 and
https://github.com/pagopa/io-dev-api-server/pull/324 ⚠️

## Short description
This PR adds a new outcome screen for an already onboarded payment
method

## List of changes proposed in this pull request
- Added translation locales for the screen;
- Added `ALREADY_ONBOARDED` outcome into enum;
- Added `ALREADY_ONBOARDED` pictogram into definition; 

## How to test
- Checkout https://github.com/pagopa/io-dev-api-server/pull/324 and run
dev-server
- Start the new onboarding process from dev mode playground;
- Select from the dropdown the outcome `ALREADY_ONBOARDED`;
- You should navigate to the correct page showed in the preview below

## Preview
<img
src="https://github.com/pagopa/io-app/assets/34343582/ef560287-7bd3-4f45-a955-0c248f41d9b3"
width="250" />

---------

Co-authored-by: Jacopo Pompilii <Jacopo.pompilii@pagopa.it>
Co-authored-by: Martino Cesari Tomba <60693085+forrest57@users.noreply.github.com>
Co-authored-by: Federico Mastrini <federicomastrini93@gmail.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1210,6 +1210,10 @@ wallet:
         title: Si è verificato un errore imprevisto
         subtitle: Riprova o contatta l'assistenza
         primaryAction: Chiudi
+      ALREADY_ONBOARDED:
+        title: Hai già aggiunto questo metodo
+        subtitle: ""
+        primaryAction: Chiudi
   alert:
     supportedCardPageLinkError: An error occurred while opening the supported cards page.
     msgErrorUpdateApp: "An error occurred while opening the app store"
