fix: type in locales

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1347,7 +1347,7 @@ wallet:
           bottomSheetTitle: "Why can't I pay with this method?"
           bottomSheetDescription: "The “In app payments“ feature may be turned off.\nBefore trying to make the payment again, please do the following:\n\n1. go to the “Wallet“ section;\n2. select the payment method you want to use;\n3. enable “In app payments“."
   firstTransactionSummary:
-    loading: Recuepro delle informazioni in corso
+    loading: Recupero delle informazioni in corso
     title: Payment information
     amount: Amount
     total: Total paid
