--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1351,7 +1351,7 @@ wallet:
           bottomSheetTitle: "Perché non riesco a pagare con questo metodo?"
           bottomSheetDescription: "La funzionalità “Pagamenti in app” potrebbe essere disattivata.\nPrima di riprovare ad effettuare il pagamento, procedi come segue:\n\n1. vai nella sezione “Portafoglio”;\n2. seleziona il metodo di pagamento che vuoi utilizzare;\n3. abilita “Pagamenti in app”."
   firstTransactionSummary:
-    loading: Recuepro delle informazioni in corso
+    loading: Recupero delle informazioni in corso
     title: Dati del pagamento
     amount: Importo
     total: Totale pagato
