--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3469,9 +3469,9 @@ features:
           high: "Alto"
           na: "Non disponibile"
         mdl: 
-          category: "Categoria: {{category}}"
-          expirationDate: "Scadenza: {{expirationDate}}"
-          issuedDate: "Rilasciata il: {{issuedDate}}"
+          category: "Licenza {{category}}"
+          issuedDate: "Valida dal"
+          expirationDate: "Valida fino"
       unrecognizedData: 
         title: "Non riconosci alcuni dati?"
         body: "Se ci sono errori nei dati o vuoi capire meglio cosa significano, puoi contattare il Ministero dell’Interno."
