--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1802,8 +1802,8 @@ messageDetails:
   write: Write
   id: "ID:"
   remoteContentError:
-    title: "Non è stato possibile recuperare i dettagli del messaggio"
-    body: "Abbiamo riscontrato un errore nelle informazioni fornite dall'Ente. Riprova tra qualche minuto. Se il problema persiste, contatta l’assistenza."
+    title: "The message details could not be retrieved"
+    body: "We detected an error in the information provided by the sender. Try again in a few minutes. If the issue persists, contact Support."
   attachments:
     loading: "Loading document..."
     badFormat: "The attachment format is not supported. Please contact the sender"
@@ -1817,13 +1817,13 @@ messageDetails:
     failing:
       details: "An error occurred while downloading the attachment. Retry or create a ticket"
   banner:
-    content1: "Questo è un"
-    content2: "messaggio dinamico:"
-    content3: "il contenuto potrebbe cambiare nel tempo per darti informazioni aggiornate."
-    action: "Scopri di più"
+    content1: "This is a"
+    content2: "dynamic message:"
+    content3: "its content may change over time to give you up-to-date information."
+    action: "Learn more"
   bottomSheet:
-    title: "Cos'è un messaggio dinamico?"
-    body: "L'Ente mittente potrebbe aggiornare il contenuto di questo messaggio anche dopo l'invio, per assicurare che le informazioni siano sempre accurate e rilevanti.\n\n Questa operazione avviene in casi specifici, come l'aggiornamento di informazioni obsolete o di allegati non più validi.\n\n Se l'Ente deve invece comunicarti nuove informazioni o aggiornamenti importanti, lo farà tramite un nuovo messaggio."
+    title: "What's a dynamic message?"
+    body: "It's a message that the sender can edit after you've received it. This way, the information it includes will always be up-to-date.\n\nThe sender can edit the information in a dynamic message only in specific cases. For example, to change outdated information or replace an attachment that is no longer valid.\n\nIf the sender needs to share new information or important updates with you, you'll receive a new message."
 messagePDFPreview:
   title: "PDF Preview"
   singleBtn: "Save or share"
