--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3864,7 +3864,6 @@ permissionRequest:
         5: Consenti l’accesso a file e media
       ios:
         1: Vai su “Impostazioni”
-        2: Seleziona “Privacy”
-        3: Seleziona “Foto”
-        4: Seleziona “IO” e consenti l’accesso a file e media
+        2: Seleziona “IO”
+        3: Seleziona “Foto” e consenti l’accesso
     cta: Apri Impostazioni
