--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3467,6 +3467,10 @@ features:
         securityLevels: 
           high: "High"
           na: "Not available"
+        mdl: 
+          category: "License {{category}}"
+          issuedDate: "Valid from"
+          expirationDate: "Valid until"
       unrecognizedData: 
         title: "Not recognizing some data?"
         body: "If there are errors in the data or if you want to better understand their meaning, you can contact the {{issuer}}."
