--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -978,6 +978,13 @@ payment:
       title: Tentativi di pagamento
       iuv: Codice IUV {{iuv}}
 wallet:
+  methodSelection:
+      header: Seleziona un metodo
+      yourMethods: I tuoi metodi
+      otherMethods: Altri metodi
+      alert: 
+        body: "A causa dell’importo elevato, alcuni metodi non sono disponibili."
+        cta: "Ok, ho capito!"
   methodDetails:
     cobadgeTitle: "Carta di debito"
     cardGeneric: "Carta"
