chore(IT Wallet): [SIW-780] Update `ItwPrProximityQrCodeScreen` with proximity saga (#5361)
### This PR depends on #5362 

## Short description
Include a summary of the changes.

## List of changes proposed in this pull request
- Update ItwPrProximityQrCodeScreen
- Add mocked mDL response

## How to test
Start the app. After wallet activation try to request a credential like
the mDL. Go to the credential detail and tap on "Show QR Code". Using a
verifier app Scan te QR Code to start proximity flow. The credential
should be correctly verified.

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3437,8 +3437,15 @@ features:
         success: 
           title: "Done!"
           subtitle: "Go back to the {{organizationName}} website to continue."
-      qrCodeScreen: 
-        loading: "Wait a few seconds for the verification request..."
+      qrCodeScreen:
+        title: "Personal QR code"
+        proximity:
+          start: "Proximity check started"
+          stop: "Proximity check completed"
+          peripheralConnected: "Verification device connected"
+          sessionEstablished: "A session has been established with the verification device"
+          documentRequestReceived: "Credential checking in progress"
+          documentPresentationCompleted: "Credential check completed"
     missingFeatureScreen: 
       headerTitle: "Screen not available"
       title: "This screen will be available soon."
