--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3851,3 +3851,16 @@ transaction:
       debtor: Debitore
       iuv: IUV
       subject: Oggetto del pagamento
+permissionRequest:
+  media:
+    title: Consenti a IO di accedere alle tue foto
+    subtitle: Per farlo, devi modificare le preferenze nelle impostazioni di sistema del tuo dispositivo.
+    caption: "Ecco come:"
+    step: Step {{step}}
+    steps:
+      1: Vai su “Impostazioni”
+      2: Seleziona “Applicazioni”
+      3: Seleziona “IO”
+      4: Seleziona la voce relativa alle autorizzazioni
+      5: Consenti l’accesso a file e media
+    cta: Apri Impostazioni
