--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -644,19 +644,19 @@ authentication:
     contextualHelpTitle: "Authentifizierung"
     contextualHelpContent: "Hier findest du Informationen darüber, wie du dich bei IO authentifizieren kannst, sowie einige Sicherheitstipps."
     news: "Neu"
-    title: "Ab sofort kannst du schneller auf IO zugreifen"
-    identity-check: "Wir werden dich nur einmal im Jahr oder wenn du dich aus der App ausloggst auffordern, dich mit SPID oder CIE neu zu authentifizieren."
-    security-suggests: "Sicherheitstipps"
-    passcode: "Nach der ersten Anmeldung mit SPID oder CIE kannst du die App nur noch mit dem Entsperrcode oder biometrischen Daten öffnen."
-    notification: "Jedes Mal, wenn du dich mit SPID oder CIE bei der App anmeldest, wirst du per E-Mail benachrichtigt."
+    title: "Ab sofort kannst du leichter auf IO zugreifen"
+    identity-check: "Du musst dich nicht mehr alle 30 Tage mit SPID oder CIE authentifizieren, sondern nur noch einmal im Jahr oder wenn du die App verlässt"
+    security-suggests: "Einige Sicherheitstipps"
+    passcode: "In allen anderen Fällen reicht dein Gesicht, dein Fingerabdruck oder dein Entsperrcode aus."
+    notification: "Du erhältst bei jedem neuen Zugang eine E-Mail. Wenn du diese nicht erkennst, kannst dz den Zugang zu IO sperren."
     button-accept-lv: "Ja, Schnellzugriff einrichten"
     button-decline-lv: "Nein, ich möchte mich alle 30 Tage neu anmelden"
   security_suggestions:
-    fingerprint: "Um IO zu öffnen benötigst du deinen Entsperrcode oder deine biometrischen Daten, teile sie mit niemanden."
-    io-logout: "Wenn du dieses Gerät verlierst, beende IO über"
-    io-lock-access: "Wenn du glaubst, dass deine SPID- oder CIE-Anmeldedaten kompromittiert wurden, blockiere den Zugriff auf IO über"
+    fingerprint: "Gib deinen biometrischen Erkennungs- oder Entsperrcode nicht an Dritte weiter."
+    io-logout: "Wenn du dieses Gerät verlierst, beende IO über die Website"
+    io-lock-access: "Wenn du glaubst, dass deine SPID- oder CIE-Anmeldedaten kompromittiert wurden, blockiere den Zugriff auf IO über die Website"
     access-new-device: "Wenn du mit einem fremden Gerät auf IO zugreifst, denk daran, dich bei der App abzumelden."
-    io-site: "ioapp.it"
+    navigate_to_the_site: "Website besuchen"
   idp_selection:
     headerTitle: "Home"
     contentTitle: "Wähle deinen Identitätsanbieter"
@@ -2372,3 +2372,16 @@ transaction:
       debtor: "Schuldner"
       iuv: "IUV"
       subject: "Zahlungsgrund"
+permissionRequest:
+  media:
+    title: "Erlaube  IO den Zugriff auf deine Fotos"
+    subtitle: "Dazu musst du die Rechte in den Einstellungen deines Geräts ändern."
+    caption: "So geht's:"
+    step: "Schritt {{step}}"
+    steps:
+      1: "Geh zu “Einstellungen”"
+      2: "Wähle “Apps”"
+      3: "Wähle “IO”"
+      4: "Wähle den Punkt App-Berechtigungen"
+      5: "Lass den Zugriff auf Dateien und Medien zu"
+    cta: "Öffne Einstellungen"
