--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -653,9 +653,9 @@ authentication:
     button-decline-lv: "Nein, ich möchte mich alle 30 Tage neu anmelden"
   security_suggestions:
     fingerprint: "Gib deinen biometrischen Erkennungs- oder Entsperrcode nicht an Dritte weiter."
-    io-logout: "Wenn du dieses Gerät verlierst, beende IO über die Website"
-    io-lock-access: "Wenn du glaubst, dass deine SPID- oder CIE-Anmeldedaten kompromittiert wurden, blockiere den Zugriff auf IO über die Website"
-    access-new-device: "Wenn du mit einem fremden Gerät auf IO zugreifst, denk daran, dich bei der App abzumelden."
+    io_logout: "Wenn du dieses Gerät verlierst, beende IO über die Website"
+    io_lock_access: "Wenn du glaubst, dass deine SPID- oder CIE-Anmeldedaten kompromittiert wurden, blockiere den Zugriff auf IO über die Website"
+    access_new_device: "Wenn du mit einem fremden Gerät auf IO zugreifst, denk daran, dich bei der App abzumelden."
     navigate_to_the_site: "Website besuchen"
   idp_selection:
     headerTitle: "Home"
