refactor: update pid saga

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3495,8 +3495,8 @@ features:
           confirm: "Yes, interrupt it."
           cancel: "No, go back"
       dataSource: 
-        multi: "Provided by {{authSource}}"
-        single: "Provided by {{authSource}}"
+        multi: "Provided by {{credentialSource}}"
+        single: "Provided by {{credentialSource}}"
       credential: "Credential"
       attribute: "Attribute"
       placeholders:
