--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1970,7 +1970,7 @@ bonus:
   request: "Beantrage einen neuen Bonus"
   requestLabel: "Boni und Rabatte"
   requestTitle: "Anfrage"
-  validity_interval: "vo {{from}} bis {{to}}"
+  validity_interval: "vom {{from}} bis {{to}}"
   active: "Aktiv"
   failed: "Fehlgeschlagen"
   redeemed: "Eingelöst"
