--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -645,12 +645,12 @@ authentication:
     contextualHelpContent: "Hier findest du Informationen darüber, wie du dich bei IO authentifizieren kannst, sowie einige Sicherheitstipps."
     news: "Neu"
     title: "Ab sofort kannst du leichter auf IO zugreifen"
-    identity-check: "Du musst dich nicht mehr alle 30 Tage mit SPID oder CIE authentifizieren, sondern nur noch einmal im Jahr oder wenn du die App verlässt"
-    security-suggests: "Einige Sicherheitstipps"
+    identity_check: "Du musst dich nicht mehr alle 30 Tage mit SPID oder CIE authentifizieren, sondern nur noch einmal im Jahr oder wenn du die App verlässt"
+    security_suggests: "Einige Sicherheitstipps"
     passcode: "In allen anderen Fällen reicht dein Gesicht, dein Fingerabdruck oder dein Entsperrcode aus."
     notification: "Du erhältst bei jedem neuen Zugang eine E-Mail. Wenn du diese nicht erkennst, kannst dz den Zugang zu IO sperren."
-    button-accept-lv: "Ja, Schnellzugriff einrichten"
-    button-decline-lv: "Nein, ich möchte mich alle 30 Tage neu anmelden"
+    button_accept_lv: "Ja, Schnellzugriff einrichten"
+    button_decline_lv: "Nein, ich möchte mich alle 30 Tage neu anmelden"
   security_suggestions:
     fingerprint: "Gib deinen biometrischen Erkennungs- oder Entsperrcode nicht an Dritte weiter."
     io_logout: "Wenn du dieses Gerät verlierst, beende IO über die Website"
